--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
-    "dayjs": "^1.11.10",
-    "wy_jscolor": "^1.0.1"
+    "dayjs": "^1.11.10"
   }
 }
